package com.sandflow.smpte.mxf;

public class FileDescriptor {

}
